# gen-model-identifier

./: README.md  pyproject.toml  test_perplexity.py
gen_model_identifier/: utils.py
