[tool.poetry]
name = "gen-model-identifier"
version = "0.1.0"
description = "A toolkit for identifying pretrained language models from AI-generated text"
authors = ["MocktaiLEngineer <themocktailengineer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
transformers = "^4.33.2"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
